--- a/Final Project/Site/about.html
+++ b/Final Project/Site/about.html
@@ -54,11 +54,11 @@
                      <div class="clearfix about-copy">
                             <h5>Who we are</h5>
                             <h6>Get to know a little bit about Company 84</h6>
-                        <p>It all started in pops garage about two years ago. On a search for new furniture for my apartment, I couldnt find things that were quite right. Some items were just way out of the price range I was looking at and others (and even many of the expesive ones) were just very poorly made. I figured I'd give it a shot.</p>
+                        <p>It all started in pops garage about two years ago. On a search for new furniture for my apartment, I couldn't find things that were quite right. Some items were just way out of the price range I was looking at and others (and even many of the expensive ones) were just very poorly made. I figured I'd give it a shot.</p>
 
-                        <p>My ol' man has a massive garage with about everytool one can imagin. I went at it. Cutting too short, ripping boards wrong, but I practiced. I got better. I really enjoyed it. After making a few tables and lamps, I decided to try and sell a few. And I did. A coffee table here, a lamp there, and things started to take off.</p>
+                        <p>My ol' man has a massive garage with about every tool one can imagine. I went at it. Cutting too short, ripping boards wrong, but I practiced. I got better. I really enjoyed it. After making a few tables and lamps, I decided to try and sell a few. And I did. A coffee table here, a lamp there, and things started to take off.</p>
 
-                        <p>Now here we are! In the process of finding a location to build permanitly and continue to bring awesome furniture items to awesome people! We encourage you to take a look around and connect with us using your favorite method below.</p>
+                        <p>Now here we are! In the process of finding a location to build permanently and continue to bring awesome furniture items to awesome people! We encourage you to take a look around and connect with us using your favorite method below.</p>
 
                         
                             <h5>Our Process</h5>
@@ -75,7 +75,7 @@
                                         <a href="https://instagram.com" target="_blank"><img src="img/about_page/insta.svg"></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/about_page/mail.svg"></a>
+                                        <a href="mailto:mikejsena84@gmail.com"><img src="img/about_page/mail.svg"></a>
                                     </li>
 
                                 </ul>
