--- a/Final Project/Site/index.html
+++ b/Final Project/Site/index.html
@@ -55,7 +55,7 @@
                             <article class ="overlaycopy">
                                 <h3>WELCOME TO</h3>
                                     <h2>COMPANY 84 WOODWORKS</h2>
-                                        <p class="full">Thank's For Stopping in. Take a look around and let us know what you like. We can create and recreate the piece of furinture you have dreamed of.</p>
+                                        <p class="full">Thank's For Stopping in. Take a look around and let us know what you like. We can create and recreate the piece of furniture you have dreamed of.</p>
                             </article>
                         </div>
                     </section>
@@ -63,7 +63,7 @@
                                <section class="features clearfix">  
                                     <article class="home-blurb">
                                         <h5>Create art</h5>
-                                            <h6>In form of a functional peice of furniture</h6>
+                                            <h6>In form of a functional piece of furniture</h6>
                                     </article>
                                         <div class="feature">
                                             <div class="feature-inner"><img src="img/front_wheel_detail.jpg">
@@ -82,7 +82,7 @@
                                         <div class="feature">
                                             <div class="feature-inner"><img src="img/imperfection_bottlecap.jpg">
                                                 <h3>Imperfect Perfection</h3>
-                                                    <p>Wether we are building new to look old, or refinishing old to look new, each piece of furniture is built to excceed your expectations and make the perfect addition to your space </p><a class="feature-button" href="contact.html">Contact Us For Questions</a>
+                                                    <p>Wether we are building new to look old, or refinishing old to look new, each piece of furniture is built to exceed your expectations and make the perfect addition to your space </p><a class="feature-button" href="contact.html">Contact Us For Questions</a>
                                             </div>
                                         </div>   
                                 </section>
