--- a/Final Project/Site/contact.html
+++ b/Final Project/Site/contact.html
@@ -49,11 +49,15 @@
                         </nav>
                     </div>
                 </header>
-                    <section class="contact_form_container clearfix">  
+                  <section class="clearfix banner">
+                        <div class="contactimage">
+                    </section>
+                  
+                  <section class="contact_form_container clearfix">  
                              <article class="clearfix contact_title">
                                 <h5>Have an Idea?</h5>
                                     <h6>See something you like, or have ideas of your own? </h6>
-                                    <p><strong>Tell us about it!</strong> We love a challange. We can reproduce something you see here, or send us some ideas of something you like and we'll create something awesome together!</p>
+                                    <p><strong>Tell us about it!</strong> We love a challenge. We can reproduce something you see here, or send us some ideas of something you like and we'll create something awesome together!</p>
                                     </section>
 
 
@@ -67,7 +71,7 @@
                               </li>
                               <li>
                                 <label for="email">Email Address:</label>
-                                <input type="text" placeholder="Email" name="email" id="email">
+                                <input type="text" placeholder="Email" name="email" id="email" required="">
                               </li>
                               <li>
                                 <label for="subject">Subject:</label>
